fix: 删除steps影响到collapse的样式

--- a/src/assets/css/_element-override.scss
+++ b/src/assets/css/_element-override.scss
@@ -940,10 +940,6 @@
 .el-step__icon-inner {
   font-weight: normal;
 }
-.el-icon-arrow-right,
-.el-icon-arrow-right {
-  color: #000;
-}
 .el-step__line {
   background-color: $color-grey-6//rgba(0, 0, 0, 0.15);
 }
